# nonebot-plugin-mhguesser

./: .gitignore  .pdm-python  README.md  pyproject.toml
nonebot_plugin_mhguesser/: __init__.py  game.py  render.py
nonebot_plugin_mhguesser/resources/data/: monsters.json
nonebot_plugin_mhguesser/resources/styles/: common.css
nonebot_plugin_mhguesser/resources/templates/: correct.html  guess.html
